# word-clock

./: CMakeLists.txt  TimeDefs.h  word-clock.ino  word_clock.cpp
arduino/: word-clock.ino
